--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="net.mathdoku.holoken"
     android:versionCode="1"
-    android:versionName="1.0" >
+    android:versionName="Alpha 0.2" >
 
     <uses-sdk
         android:minSdkVersion="14"
@@ -10,16 +10,18 @@
     <application
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme" >
+        android:theme="@android:style/Theme.Holo.Light.DarkActionBar" >
+        <!--  android:theme="@style/AppTheme" -->
         <activity
             android:name=".MainActivity"
-            android:label="@string/title_activity_main" >
+            android:label="@string/main_activity_title" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".SettingsActivity" />
+        <activity android:name=".SavedGameList" />
     </application>
 
 </manifest>
