--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -10,18 +10,19 @@
     <application
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@android:style/Theme.Holo.Light.DarkActionBar" >
+        android:theme="@android:style/Theme.Holo.Light.NoActionBar.Fullscreen" >
         <!--  android:theme="@style/AppTheme" -->
         <activity
             android:name=".MainActivity"
-            android:label="@string/main_activity_title" >
+            android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
         <activity android:name=".SettingsActivity" />
-        <activity android:name=".SavedGameList" />
+        <activity android:name=".SaveGameList" />
+        <activity android:name=".StatsActivity" />
     </application>
 
 </manifest>
