--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="net.mathdoku.holoken"
-    android:versionCode="4"
-    android:versionName="Alpha 1.0" >
+    android:versionCode="5"
+    android:versionName="Alpha 1.1" >
 
     <uses-sdk
         android:minSdkVersion="11"
@@ -10,7 +10,8 @@
     <application
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@android:style/Theme.Holo.Light.NoActionBar.Fullscreen" >
+        android:theme="@style/Theme.FullScreen">
+        <!-- android:theme="@android:style/Theme.Holo.Light.NoActionBar.Fullscreen"-->
         <!--  android:theme="@style/AppTheme" -->
         <activity
             android:name=".MainActivity"
