--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,16 +1,15 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="net.mathdoku.holoken"
     android:versionCode="5"
-    android:versionName="Alpha 1.1" >
+    android:versionName="Alpha 1.1" android:installLocation="auto">
 
     <uses-sdk
-        android:minSdkVersion="11"
+        android:minSdkVersion="8"
         android:targetSdkVersion="15" />
 
     <application
         android:icon="@drawable/ic_launcher"
-        android:label="@string/app_name"
-        android:theme="@style/Theme.FullScreen">
+        android:label="@string/app_name" android:theme="@style/Theme.FullScreen">
         <!-- android:theme="@android:style/Theme.Holo.Light.NoActionBar.Fullscreen"-->
         <!--  android:theme="@style/AppTheme" -->
         <activity
@@ -22,7 +21,7 @@
             </intent-filter>
         </activity>
         <activity android:name=".SettingsActivity" />
-        <activity android:name=".SaveGameList" />
+        <activity android:name=".SaveGameListActivity" />
         <activity android:name=".StatsActivity" />
     </application>
 
