--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,15 +1,16 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="net.mathdoku.holoken"
-    android:versionCode="7"
-    android:versionName="Alpha 1.3" android:installLocation="auto">
+    android:versionCode="8"
+    android:versionName="Alpha 1.4" android:installLocation="auto">
 
     <uses-sdk
         android:minSdkVersion="8"
         android:targetSdkVersion="15" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
 
     <application
         android:icon="@drawable/ic_launcher"
-        android:label="@string/app_name" android:theme="@style/Theme.FullScreen">
+        android:label="@string/app_name" android:theme="@style/Theme.Light.FullScreen">
         <!-- android:theme="@android:style/Theme.Holo.Light.NoActionBar.Fullscreen"-->
         <!--  android:theme="@style/AppTheme" -->
         <activity
