--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="net.mathdoku.holoken"
-    android:versionCode="8"
-    android:versionName="Alpha 1.4" android:installLocation="auto">
+    android:versionCode="9"
+    android:versionName="Alpha 1.5" android:installLocation="auto">
 
     <uses-sdk
         android:minSdkVersion="8"
@@ -10,7 +10,7 @@
 
     <application
         android:icon="@drawable/ic_launcher"
-        android:label="@string/app_name" android:theme="@style/Theme.Light.FullScreen">
+        android:label="@string/app_name" android:theme="@style/Theme.Dark.FullScreen">
         <!-- android:theme="@android:style/Theme.Holo.Light.NoActionBar.Fullscreen"-->
         <!--  android:theme="@style/AppTheme" -->
         <activity
