--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="net.mathdoku.holoken"
-    android:versionCode="9"
-    android:versionName="Alpha 1.5" android:installLocation="auto">
+    android:versionCode="10"
+    android:versionName="Alpha 1.6" android:installLocation="auto">
 
     <uses-sdk
         android:minSdkVersion="8"
@@ -10,12 +10,12 @@
 
     <application
         android:icon="@drawable/ic_launcher"
-        android:label="@string/app_name" android:theme="@style/Theme.Dark.FullScreen">
-        <!-- android:theme="@android:style/Theme.Holo.Light.NoActionBar.Fullscreen"-->
-        <!--  android:theme="@style/AppTheme" -->
+        android:label="@string/app_name" 
+        android:theme="@style/Theme.Dark.FullScreen">
         <activity
             android:name=".MainActivity"
-            android:label="@string/app_name" >
+            android:label="@string/app_name" 
+            android:configChanges="orientation|keyboardHidden" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
