--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="net.mathdoku.holoken"
-    android:versionCode="11"
-    android:versionName="Alpha 1.7" android:installLocation="auto">
+    android:versionCode="12"
+    android:versionName="1.8" android:installLocation="auto">
 
     <uses-sdk
         android:minSdkVersion="8"
@@ -11,7 +11,7 @@
     <application
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name" 
-        android:theme="@style/Theme.Dark.FullScreen">
+        android:theme="@style/Theme.Dark.NoTitle">
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name" 
